@@ -46,6 +46,26 @@
       <artifactId>webdrivermanager</artifactId>
       <version>5.8.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.github.ozlerhakan/poiji -->
+    <dependency>
+      <groupId>com.github.ozlerhakan</groupId>
+      <artifactId>poiji</artifactId>
+      <version>4.5.0</version>
+    </dependency>
+
 
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>22</source>
+          <target>22</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
